--- a/public/language/fr.json
+++ b/public/language/fr.json
@@ -4,5 +4,13 @@
         "about": "À propos",
         "services": "Services",
         "contact": "Contact"
+    },
+    "home": {
+        "title": "Rida Labbiz",
+        "firstName": "Rida",
+        "lastName": "Labbiz",
+        "subtitle": "Développeur Full Stack",
+        "button": "Lire le CV",
+        "scroll": "Faites défiler"
     }
 }
